小純子喜歡黑紅色的按鍵

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,12 +15,15 @@
             android:id="@+id/btnM1"
             android:layout_width="97dp"
             android:layout_height="42dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="4dp"
-            android:text="接下來？"
+            android:text="Next"
+            app:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.4" />
+            app:layout_constraintVertical_bias="0.4"
+            app:rippleColor="@color/design_default_color_error" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -32,7 +35,7 @@
 
     <ImageView
         android:id="@+id/img"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:srcCompat="@drawable/pu0" />
 
