--- a/app/src/main/res/layout/activity_storyac.xml
+++ b/app/src/main/res/layout/activity_storyac.xml
@@ -6,40 +6,37 @@
     android:layout_height="match_parent"
     tools:context=".StoryAC">
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <ImageView
+        android:id="@+id/imgsy"
+        android:layout_width="409dp"
+        android:layout_height="367dp"
+        android:src="@drawable/c22"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="26dp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
+    <TextView
+        android:id="@+id/sy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="傳說大致上的內容為：在火災現場的上空，會出現一艘載著罹難者幽靈的船，它會帶著幽靈前往陰間，而且除非乘客滿100人（一說108人）否則不會啟程，因此它會在台灣各地移動，蒐集火災罹難者的亡靈[1]。據說要有陰陽眼的人才可看見這艘幽靈船，平常靈感不強的人只能看見一團黑氣。一般認為這艘幽靈船是靈界來接人，看的到它是靈界跟現世重疊產生的現象。"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgsy" />
 
-            <ImageView
-                android:id="@+id/imgsy"
-                android:layout_width="409dp"
-                android:layout_height="367dp"
-                android:src="@drawable/c22" />
-
-            <TextView
-                android:id="@+id/sy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:text="傳說大致上的內容為：在火災現場的上空，會出現一艘載著罹難者幽靈的船，它會帶著幽靈前往陰間，而且除非乘客滿100人（一說108人）否則不會啟程，因此它會在台灣各地移動，蒐集火災罹難者的亡靈[1]。據說要有陰陽眼的人才可看見這艘幽靈船，平常靈感不強的人只能看見一團黑氣。一般認為這艘幽靈船是靈界來接人，看的到它是靈界跟現世重疊產生的現象。"
-                android:textColor="#333232"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/resy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                android:text="Back"
-                app:backgroundTint="@color/black"
-                app:rippleColor="@color/design_default_color_error" />
-        </LinearLayout>
-    </ScrollView>
-
+    <Button
+        android:id="@+id/resy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Back"
+        app:backgroundTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:rippleColor="@color/design_default_color_error" />
 </androidx.constraintlayout.widget.ConstraintLayout>
