--- a/app/src/main/res/layout/activity_storyac.xml
+++ b/app/src/main/res/layout/activity_storyac.xml
@@ -6,37 +6,58 @@
     android:layout_height="match_parent"
     tools:context=".StoryAC">
 
-    <ImageView
-        android:id="@+id/imgsy"
-        android:layout_width="409dp"
-        android:layout_height="367dp"
-        android:src="@drawable/c22"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="26dp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/sy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="傳說大致上的內容為：在火災現場的上空，會出現一艘載著罹難者幽靈的船，它會帶著幽靈前往陰間，而且除非乘客滿100人（一說108人）否則不會啟程，因此它會在台灣各地移動，蒐集火災罹難者的亡靈[1]。據說要有陰陽眼的人才可看見這艘幽靈船，平常靈感不強的人只能看見一團黑氣。一般認為這艘幽靈船是靈界來接人，看的到它是靈界跟現世重疊產生的現象。"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgsy" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-    <Button
-        android:id="@+id/resy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Back"
-        app:backgroundTint="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:rippleColor="@color/design_default_color_error" />
+            <ImageView
+                android:id="@+id/imgsy"
+                android:layout_width="375dp"
+                android:layout_height="367dp"
+                android:src="@drawable/c22" />
+
+            <TextView
+                android:id="@+id/acsy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="幽靈船的起源，最早是從1995年台中的衛爾康餐廳大火開始的，共造成64死11傷。為台灣有史以來單一建築物死亡人數最多的火災與踩踏事故，同時這次大火也是台灣歷來第二多人死亡的火災。"
+                android:textColor="#333232"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/acsy2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="釀災原因：起因於瓦斯外洩。餐廳旁邊原本是停車場及防火巷空地，但後來被改建成KTV，逃生無門。"
+                android:textColor="#333232"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/acsy3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:text="據說當時幽靈船就停在餐廳的上空，而台中的金沙百貨(後改名神鑑大樓)、新北三重的重新橋、台南的中國城等地方，也都有傳言出現幽靈船的蹤影。有人說他們在蒐集乘客（亡魂）。幽靈船被認為是靈界來接人，而且除非乘客滿100人（一說108人）否則不會啟程。"
+                android:textColor="#333232"
+                android:textSize="20sp" />
+
+            <Button
+                android:id="@+id/resy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="Back"
+                app:backgroundTint="@color/black"
+                app:rippleColor="@color/design_default_color_error" />
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
