--- a/app/src/main/res/layout/activity_storyac.xml
+++ b/app/src/main/res/layout/activity_storyac.xml
@@ -16,13 +16,13 @@
             android:orientation="vertical" >
 
             <ImageView
-                android:id="@+id/imgsy"
+                android:id="@+id/imgse"
                 android:layout_width="375dp"
                 android:layout_height="367dp"
                 android:src="@drawable/c22" />
 
             <TextView
-                android:id="@+id/acsy"
+                android:id="@+id/acse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -31,7 +31,7 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/acsy2"
+                android:id="@+id/acse2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -40,7 +40,7 @@
                 android:textSize="20sp" />
 
             <TextView
-                android:id="@+id/acsy3"
+                android:id="@+id/acse3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
@@ -49,7 +49,7 @@
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/resy"
+                android:id="@+id/rese"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
