--- a/app/src/main/res/layout/activity_select_as.xml
+++ b/app/src/main/res/layout/activity_select_as.xml
@@ -6,4 +6,67 @@
     android:layout_height="match_parent"
     tools:context=".SelectAS">
 
+    <ImageView
+        android:id="@+id/imgS4"
+        android:layout_width="407dp"
+        android:layout_height="309dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnB4L"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/c23" />
+
+    <TextView
+        android:id="@+id/tt4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="彭婉如為何遇害？"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imgS4" />
+
+    <Button
+        android:id="@+id/btnB4L"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="104dp"
+        android:text="與女權有關"
+        app:backgroundTint="#47000D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tt"
+        app:rippleColor="@android:color/holo_red_dark" />
+
+    <Button
+        android:id="@+id/btnB4R"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="104dp"
+        android:text="不明"
+        app:backgroundTint="#47000D"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tt"
+        app:rippleColor="@android:color/holo_red_dark" />
+
+    <Button
+        android:id="@+id/re4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="32dp"
+        android:text="Back"
+        app:backgroundTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="parent"
+        app:rippleColor="@color/design_default_color_error" />
 </androidx.constraintlayout.widget.ConstraintLayout>
