--- a/app/src/main/res/layout/activity_select_as.xml
+++ b/app/src/main/res/layout/activity_select_as.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/c23" />
+        app:srcCompat="@drawable/s41" />
 
     <TextView
         android:id="@+id/tt4"
