--- a/app/src/main/res/layout/activity_story_as.xml
+++ b/app/src/main/res/layout/activity_story_as.xml
@@ -19,7 +19,7 @@
                 android:id="@+id/imgas"
                 android:layout_width="match_parent"
                 android:layout_height="424dp"
-                app:srcCompat="@drawable/e32" />
+                app:srcCompat="@drawable/s42" />
 
             <TextView
                 android:id="@+id/acss"
